[package]
name = "raytracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
impl_ops = "0.1.1"
tokio = { version = "1.23.1", features = ["fs", "io-util", "rt", "macros", "rt-multi-thread"] }

[dev-dependencies]
pretty_assertions = "1.0.0"
tempfile = "3.3.0"
